refactor(web): 优化代码注解和异常处理方法签名
- 为方法参数添加 lombok.NonNull 注解提升空指针安全
- 修改国际化语言解析逻辑，支持单一语言代码和完整语言区域代码
- 简化全局异常处理器中业务异常处理方法签名，移除 HttpServletRequest 参数
- 修正参数类型不匹配异常日志信息，避免空指针
- 移除 SSE 连接超时异常处理方法入参，简化方法签名
- 调整 XssHttpServletRequestWrapper 中输入流读取方法，去除 throws 声明
- 优化代码 import，移除未使用的导入依赖